--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -7,22 +7,16 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# Copy .env file
+COPY .env .
+
+# Copy the rest of the application
 COPY . .
-
-# Create directory for environment files
-RUN mkdir -p /app/config
-
-# Copy .env file to config directory
-COPY ../.env /app/config/.env
 
 EXPOSE 8000
 
 # Install python-dotenv if not in requirements.txt
 RUN pip install python-dotenv
-
-# Set environment variable for .env file location
-ENV ENV_FILE=/app/config/.env
 
 # Use environment variables from .env
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
