--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./public:/app/public
     depends_on:
       - backend
+    restart: always
 
   backend:
     build:
@@ -24,3 +25,4 @@ services:
       - MONGO_URI=${MONGO_URI}
     volumes:
       - ./backend:/app
+    restart: always
